Fixed small visual problem with vertical spacing on mobile devices

--- a/src/responsive.css
+++ b/src/responsive.css
@@ -114,13 +114,14 @@
 
 @media only screen and (max-width: 576px) {
     .wrapper {
-        grid-template-rows: 4rem 6rem;
+        grid-template-rows: 4rem 7rem;
     }
 
     .header {
         flex-direction: column;
         align-items: center;
-        gap: .5rem;
+        gap: .75rem;
+        margin-bottom: 1rem;
     }
 }
 
